# mcmphoton

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: example_1.py
src/mcmphoton/classes/: __init__.py  layer.py  photon.py  plotter.py  point3d.py  simulation.py  source.py  tissuemodel.py
src/mcmphoton/examples/: assignment_1.py
src/mcmphoton/tests/: test_point3d.py
